--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,8 @@
 --- #YAML:1.0
 name: WebService-StreetMapLink
-version: 0.02
-author: David Rolsky <autarch@urth.org>
+version: 0.03
+author:
+  - David Rolsky <autarch@urth.org>
 abstract: An API for generating links to online map services
 license: perl
 requires:
@@ -11,11 +12,13 @@ requires:
 provides:
   WebService::StreetMapLink:
     file: lib/WebService/StreetMapLink.pm
-    version: 0.02
+    version: 0.03
+  WebService::StreetMapLink::Catcha:
+    file: lib/WebService/StreetMapLink/Catcha.pm
   WebService::StreetMapLink::MapQuest:
     file: lib/WebService/StreetMapLink/MapQuest.pm
   WebService::StreetMapLink::Multimap:
     file: lib/WebService/StreetMapLink/Multimap.pm
   WebService::StreetMapLink::Streetdirectory:
     file: lib/WebService/StreetMapLink/Streetdirectory.pm
-generated_by: Module::Build version 0.25
+generated_by: Module::Build version 0.26
