--- a/META.yml
+++ b/META.yml
@@ -1,19 +1,24 @@
 ---
 name: WebService-StreetMapLink
-version: 0.09
+version: 0.1
 author:
-  - David Rolsky <autarch@urth.org>
+  - 'David Rolsky <autarch@urth.org>'
 abstract: An API for generating links to online map services
 license: perl
+resources:
+  license: http://dev.perl.org/licenses/
 requires:
   Class::Factory::Util: 0
   Geography::States: 0
   Params::Validate: 0
   Test::More: 0
+  URI: 1.28
+build_requires:
+  Module::Build: 0
 provides:
   WebService::StreetMapLink:
     file: lib/WebService/StreetMapLink.pm
-    version: 0.09
+    version: 0.1
   WebService::StreetMapLink::Catcha:
     file: lib/WebService/StreetMapLink/Catcha.pm
   WebService::StreetMapLink::Google:
@@ -24,4 +29,7 @@ provides:
     file: lib/WebService/StreetMapLink/Multimap.pm
   WebService::StreetMapLink::Streetdirectory:
     file: lib/WebService/StreetMapLink/Streetdirectory.pm
-generated_by: Module::Build version 0.261
+generated_by: Module::Build version 0.28
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.2.html
+  version: 1.2
